@@ -23,6 +23,7 @@ Github `repo <https://github.com/etingof/pysnmp>`_
   present (e.g. py2exe/cx_freeze environments).
 - Fix broken 3DES key localization and encryption procedures.
 - Updated IP address for demo.snmplabs.com in examples.
+- Missing index added to bundled RFC1213::atEntry MIB table
 
 Revision 4.3.2, released 2016-02-12
 -----------------------------------
